--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,57 @@
-version: "3.8"
+version: '3'
 
 services:
-  frontend:
-    build:
-      context: frontend
-    container_name: frontend
-    hostname: frontend
-    ports:
-      - "4173:4173"
-    expose:
-      - "5173"
+  db:
+    image: postgres:latest
     volumes:
-      - ./frontend:/usr/app
-  backend:
-    build:
-      context: backend
+      - db_data:/var/lib/postgresql/data
+    container_name: postgress
+    restart: always
+    expose: 
+      - "5432"
+    environment:
+      POSTGRES_DB: "${POSTGRES_DB}"
+      POSTGRES_USER: "${POSTGRES_USER}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      PG_DATA: /var/lib/postgresql/data
+    networks:
+      - ft_transcendance
+    env_file:
+      - .env
+
+  back:
+    build: "./back/"
     container_name: backend
-    hostname: backend
+    restart: always
     ports:
       - "3000:3000"
-    expose:
-      - "5173"
-      - "5432"
-        #      - "5000"
+    command: sh -c "npm install; npm run build; npm run start:dev"
+    environment:
+      POSTGRES_DB: "${POSTGRES_DB}"
+      POSTGRES_USER: "${POSTGRES_USER}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     volumes:
-      - ./backend:/usr/app
-  db:
-    image: postgres:15
-      container_name: postgresql
-      hostname: postgresql
-      expose:
-         - "5432"
-      environment:
-        POSTGRES_PASSWORD: example
+      - ./back:/app
+    networks:
+      - ft_transcendance
+    depends_on:
+      - "db"
+  front:
+    build:
+      context: "./front/"
+      dockerfile: Dockerfile
+    container_name: frontend
+     # dockerfile: Dockerfile
+    command: sh -c "npm install ; npm run build ; npm run dev"
+    ports:
+      - "8080:8080"
     volumes:
-      - db:/var/lib/postgresql/data
+      - ./front:/app
 
-  volumes:
-    db:
-      name: db
+
+volumes:
+  db_data:
+networks:
+  ft_transcendance:
+    driver: bridge
+    #docker-compose -f docker-compose.yml --env-file .env up --build
