--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,10 +2,8 @@ FROM node:latest
 
 WORKDIR /app
 
-COPY . .
+COPY entrypoint.sh .
 
-RUN npm install
+RUN chmod +x entrypoint.sh
 
-RUN npm run build
-
-ENTRYPOINT ["npm", "run", "dev"]
+ENTRYPOINT ["./entrypoint.sh"]
