fix backend Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,8 @@ FROM node:latest
 
 WORKDIR /app
 
-COPY ./*json .
+COPY entrypoint.sh .
 
-RUN npm install
+RUN chmod +x entrypoint.sh
 
-RUN npm run build
-
-ENTRYPOINT ["npm", "run", "start:dev"]
+ENTRYPOINT ["./entrypoint.sh"]
