--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,16 @@ services:
     volumes:
       - ./frontend:/app
 
+  pgadmin:
+    container_name: pgadmin42
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
+
 volumes:
   db_data:
 
