--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   }
 }
