--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - ./frontend:/app
 
   pgadmin:
-    container_name: pgadmin42
+    container_name: pgadmin
     image: dpage/pgadmin4
     restart: always
     environment:
@@ -51,6 +51,8 @@ services:
       PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_DEFAULT_PASSWORD}"
     ports:
       - "5050:80"
+    depends_on:
+      - "db"
 
 volumes:
   db_data:
