--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "sirv-cli": "^2.0.0",
+    "socket.io-client": "^4.6.1",
     "svelte-spa-router": "^3.3.0"
   }
 }
