--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       POSTGRES_USER: "${POSTGRES_USER}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       DATABASE_URL: "${DATABASE_URL}"
+      JWT_SECRET: "{JWT_SECRET}"
     volumes:
       - ./backend:/app
     depends_on:
