--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,9 @@ services:
       POSTGRES_USER: "${POSTGRES_USER}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       DATABASE_URL: "${DATABASE_URL}"
-      JWT_SECRET: "{JWT_SECRET}"
+      JWT_SECRET: "${JWT_SECRET}"
+      UID: "${UID}"
+      SECRET: "${SECRET}"
     volumes:
       - ./backend:/app
     depends_on:
