--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@rollup/plugin-url": "^8.0.1",
     "@tsconfig/svelte": "^3.0.0",
     "rollup": "^3.15.0",
     "rollup-plugin-css-only": "^4.3.0",
@@ -32,6 +33,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "sirv-cli": "^2.0.0",
-    "svelte-spa-router": "^3.3.0"
+    "svelte-spa-router": "^3.3.0",
+    "url": "^0.11.0"
   }
 }
