--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "sirv-cli": "^2.0.0",
+    "svelte-cookie": "^1.0.1",
     "svelte-spa-router": "^3.3.0"
   }
 }
