--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@rollup/plugin-url": "^8.0.1",
     "@tsconfig/svelte": "^3.0.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
     "rollup": "^3.15.0",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -26,6 +28,7 @@
     "svelte": "^3.55.0",
     "svelte-check": "^3.0.0",
     "svelte-preprocess": "^5.0.0",
+    "tailwindcss": "^3.2.7",
     "tslib": "^2.5.0",
     "typescript": "^4.9.0"
   },
