--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
+    "daisyui": "^2.51.4",
     "sirv-cli": "^2.0.0",
     "svelte-spa-router": "^3.3.0",
     "url": "^0.11.0"
