download images OK

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - "db"
     volumes:
       - ./backend:/app
+      - images:/app/images
     restart: always
 
   frontend:
@@ -59,6 +60,7 @@ services:
 
 volumes:
   db_data:
+  images:
 
 networks:
   default:
