--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/websockets": "^9.3.9",
     "@prisma/client": "^4.11.0",
+    "@types/multer": "^1.4.7",
     "axios": "^1.3.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
