--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       JWT_SECRET: $JWT_SECRET
       FT_UID: $FT_UID
       FT_SECRET: $FT_SECRET
+      OTP_SECRET: $OTP_SECRET
     depends_on:
       - "db"
     volumes:
