User setting changeImages | User info 35%

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY entrypoint.sh .
 
+COPY images/basic-pp.jpg   /app/images/basic_pp.jpg
+
 RUN chmod +x entrypoint.sh
 
 ENTRYPOINT ["./entrypoint.sh"]
