--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "prisma": {
-    "fill": "ts-node prisma/fill.ts"
   },
   "scripts": {
+    "fill": "ts-node prisma/fill.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
