--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@rollup/plugin-url": "^8.0.1",
     "@tsconfig/svelte": "^3.0.0",
+    "@zerodevx/svelte-toast": "^0.9.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "rollup": "^3.15.0",
